# multimonitor-wallpapers

./: .gitignore  .justfile  .ruff.toml  README.md  __init__.py  dev.py  form.ui  form_ui.py  generate_icon.py  justfile  multimonitor_wallpapers.py  mypy.ini  pyproject.toml  requirements.txt  ui_form.py  widget.py
.github/: dependabot.yml
.github/workflows/: codeql.yml  python-tests.yml  release.yml
.uv/: settings.toml
scripts/: build_appimage.py
src/multimonitor_wallpapers/: __init__.py  __main__.py  widget.py
tests/: __init__.py  test_basic.py
